@@ -139,6 +139,8 @@ Release 1.0.0 - 2011.11.27
 
     HADOOP-7854. UGI getCurrentUser is not synchronized. (Daryn Sharp via jitendra)
 
+    HADOOP-7865. Test Failures in 1.0 hdfs/common. (jitendra)
+
 Release 0.20.205.0 - 2011.10.06
 
   NEW FEATURES
